Add Deep Learning Face Recognition System with GUI - 500 images per person dataset - Complete attendance management - JavaFX modern interface - DNN + FaceNet models - 500+ database entries